pool api endpoint updated openapi
